crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__native_queries__select_order_by_artist_album_count.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden",
        "albums": {
          "aggregates": {
            "how_many_albums": 3
          },
          "rows": [
            {
              "Title": "A Matter of Life and Death"
            },
            {
              "Title": "A Real Dead One"
            },
            {
              "Title": "A Real Live One"
            }
          ]
        }
      },
      {
        "Name": "Os Paralamas Do Sucesso",
        "albums": {
          "aggregates": {
            "how_many_albums": 3
          },
          "rows": [
            {
              "Title": "Acústico MTV"
            },
            {
              "Title": "Arquivo II"
            },
            {
              "Title": "Arquivo Os Paralamas Do Sucesso"
            }
          ]
        }
      },
      {
        "Name": "Black Label Society",
        "albums": {
          "aggregates": {
            "how_many_albums": 2
          },
          "rows": [
            {
              "Title": "Alcohol Fueled Brewtality Live! [Disc 1]"
            },
            {
              "Title": "Alcohol Fueled Brewtality Live! [Disc 2]"
            }
          ]
        }
      },
      {
        "Name": "Faith No More",
        "albums": {
          "aggregates": {
            "how_many_albums": 2
          },
          "rows": [
            {
              "Title": "Album Of The Year"
            },
            {
              "Title": "Angel Dust"
            }
          ]
        }
      },
      {
        "Name": "U2",
        "albums": {
          "aggregates": {
            "how_many_albums": 2
          },
          "rows": [
            {
              "Title": "Achtung Baby"
            },
            {
              "Title": "All That You Can't Leave Behind"
            }
          ]
        }
      }
    ]
  }
]
